# interinos-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml
.github/workflows/: ci.yml  scrape.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: main.py
app/api/: admin.py  distance.py  geocode.py  vacancies.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  distance_cache.py  geocode_cache.py  scrape_run.py  vacancy.py
app/scheduler/: jobs.py  run_once.py
app/schemas/: distance.py  geocode.py  vacancy.py
app/scrapers/: dto.py  sipri_client.py  sipri_parser.py
app/services/: geocode_service.py  routing_service.py  vacancies_sync.py
tests/: conftest.py  test_admin_auth.py  test_geocode_service.py  test_routing_service.py  test_sipri_client_live.py  test_sipri_parser.py  test_vacancies_sync_logic.py
tests/fixtures/sipri/: sipri-buscarjson-sample.json
